--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "^10.4.14",
     "cssnano": "^5.1.15",
     "cssnano-preset-advanced": "^5.3.10",
+    "dotenv": "^16.0.3",
     "gulp": "^4.0.2",
     "gulp-if": "^3.0.0",
     "gulp-plumber": "^1.2.1",
