adds yaml config

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "postcss-load-config": "^4.0.1",
     "sass": "^1.59.3",
     "twig": "<1.14",
-    "twing": "^5.1.2"
+    "twing": "^5.1.2",
+    "yaml": "^2.2.1"
   }
 }
