--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:fractal": "NODE_OPTIONS='--inspect 0.0.0.0:9229' fractal start --watch --sync",
-    "fractal": "fractal",
+    "start:fractal:test": "NODE_OPTIONS='--inspect 0.0.0.0:9229' fractal start --watch --sync",
+    "start:fractal": "gulp fractal",
+    "fractal:interactive": "fractal",
     "gulp": "gulp",
     "build": "gulp build",
     "build:fractal": "gulp fractal:build",
