changes component statuses to WIP

--- a/src/components/alerts/alerts.config.yml
+++ b/src/components/alerts/alerts.config.yml
@@ -1,4 +1,4 @@
-status: ready
+status: wip
 context:
   body: 'Lorem ipsum dolor sit amet, <a class="usa-link" href="javascript:void(0);">consectetur adipiscing</a> elit, sed do eiusmod.'
   title: Warning
