IQ-USWDS-RC-1 added npm script to copy uswds assets, theme image assets and compile sass for devs that need to leave and then renenter their development branch

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "gulp build",
     "build:fractal": "gulp fractal:build",
     "copy:uswds": "gulp uswds:copyAssets",
-    "copy:images": "gulp copy:images"
+    "copy:images": "gulp copy:images",
+    "assets:rebase": "gulp uswds:copyAssets && gulp copy:images & gulp uswds:compileSass"
   },
   "repository": {
     "type": "git",
