IQUSWDS-2 added the ablility to edit the port number on what fractal is running on. I also upgraded @USWDS/USWDS to 3.7.1

--- a/iq.tooling.yml
+++ b/iq.tooling.yml
@@ -9,6 +9,7 @@ fractal:
   uswds_path: templates
   template_path: templates
   theme_name: iq_uswds
+  port: 3000
 iqTooling:
   img_dest: ./assets/img
   img_source: ./src/images/**
