--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "@frctl/fractal": "^1.5.15",
     "@frctl/mandelbrot": "^1.10.3",
     "@iq-solutions/fractal-twing": "^0.1.3",
-    "@uswds/compile": "^1.1.0",
-    "@uswds/uswds": "^3.8.0",
+    "@uswds/compile": "^1.2.0",
+    "@uswds/uswds": "^3.9.0",
     "@wondrousllc/fractal-twig-drupal-adapter": "^1.3.1",
-    "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.1",
-    "cssnano-preset-advanced": "^7.0.1",
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
+    "cssnano-preset-advanced": "^7.0.6",
     "dotenv": "^16.4.5",
     "gulp": "^5.0.0",
     "gulp-if": "^3.0.0",
@@ -59,12 +59,12 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "jshint": "^2.13.6",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
     "postcss-load-config": "^5.1.0",
-    "sass": "^1.77.2",
+    "sass": "^1.80.6",
     "twig": "^1.17.1",
-    "twing": "^5.2.2",
-    "yaml": "^2.4.2"
+    "twing": "5.2.2",
+    "yaml": "^2.6.0"
   }
 }
